fix invisible text on dark theme

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,10 +3,12 @@
     --link-color: #3182ce;
     --link-visited: #805ad5;
     --link-hover: #2c5282;
+    --text-color: #000000;
 }
 
 :root[class~="dark"] {
     --striping-color: #2b2b2b;
+    --text-color: #ffffff;
 }
 
 
@@ -29,7 +31,7 @@ article {
 
 .playbook-card-content {
     text-decoration: none;
-    color: #000000;
+    color: var(--text-color);
 }
 
 /* landing page (index.html) */
